<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wallpaper"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="530dp"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:background="@drawable/bg_dashboard"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:padding="16sp"
            android:text="RENT|HUB"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:drawableTopCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/welcome_to_rent_hub"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/we_provides_a_plat_form_to_the_services_you_needs"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/button_register"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button3"
            android:gravity="center"
            android:onClick="gotoRegister"
            android:padding="5dp"
            android:text="@string/register_now"
            android:textColor="@color/colorAccent"
            android:textColorLink="@color/DarkGreen" />

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:background="@drawable/button3"
            android:gravity="center"
            android:onClick="gotoLogIn"
            android:padding="5dp"
            android:text="@string/already_account_login_now"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
