<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feedback">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/newcolor1"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_back"
            app:title="Send Feedback"
            app:titleTextColor="#FFFFFF">

        </androidx.appcompat.widget.Toolbar>


        <EditText
            android:id="@+id/title_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape"
            android:fontFamily="sans-serif-light"
            android:hint="@string/title"
            android:paddingEnd="15dp"
            android:paddingStart="15dp" />

        <EditText
            android:id="@+id/message_id"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:gravity="start|top"
            android:hint="@string/write_here"
            android:lines="10"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button3"
            android:text="@string/send"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>