<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textColorHint="#00E676"
        android:textSize="18sp"
        app:drawableTopCompat="@drawable/ic_login" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="#00E676">

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="#00E676"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resetPass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:padding="3dp"
                android:text="Reset Password"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:padding="3dp"
                android:text="Forgot Password"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            app:cardBackgroundColor="#C68266"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button4"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button8"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/register_now"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/googleSignInTextView"
        android:layout_width="176dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button8"
        android:gravity="center"
        android:text="Google SignIn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/common_google_signin_btn_icon_light_focused" />
</LinearLayout>