<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/btn_disabled"
    android:layout_gravity="center_horizontal"
    tools:context=".SignUpAs">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_signup"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up here"
        android:textSize="24sp"
        android:textColor="@color/DarkGreen"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/DarkGreen"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_user" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/DarkGreen"
        android:hint="Email Address"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/DarkGreen"
        android:drawableStart="@drawable/ic_lock" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/DarkGreen"
        android:drawableStart="@drawable/ic_lock"/>

    <Spinner
        android:id="@+id/spinnerRoles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/roles"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@color/DarkGreen">
    </Spinner>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:background="@color/DarkGreen"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:text="@string/sign_up" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Account"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in here"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</LinearLayout>